--- a/config/CubeAgent.yaml
+++ b/config/CubeAgent.yaml
@@ -1,46 +1,26 @@
-# behaviors:
-#   CubeAgent:
-#     trainer_type: ppo
-#     hyperparameters:
-#       batch_size: 128
-#       buffer_size: 1024
-#       learning_rate: 3.0e-4
-#       beta: 5.0e-3
-#       epsilon: 0.2
-#       lambd: 0.99
-#       num_epoch: 5
-#       learning_rate_schedule: linear
-#       beta_schedule: constant
-#       epsilon_schedule: linear
-#     network_settings:
-#       normalize: false
-#       hidden_units: 128
-#       num_layers: 2
-#     reward_signals:
-#       extrinsic:
-#         gamma: 0.99
-#         strength: 1.0
-#     max_steps: 150000
-#     time_horizon: 64
-#     summary_freq: 2000
 behaviors:
   CubeAgent:
     trainer_type: ppo
     hyperparameters:
-      batch_size: 64            # Smaller batch size for faster updates
-      buffer_size: 2048         # Increased for better training signal
-      learning_rate: 0.0005     # Slightly increased learning rate
-      beta: 0.01
+      batch_size: 128
+      buffer_size: 1024
+      learning_rate: 3.0e-4
+      beta: 5.0e-3
       epsilon: 0.2
       lambd: 0.99
-      num_epoch: 4
+      num_epoch: 5
+      learning_rate_schedule: linear
+      beta_schedule: constant
+      epsilon_schedule: linear
     network_settings:
+      normalize: false
       hidden_units: 128
       num_layers: 2
     reward_signals:
       extrinsic:
         gamma: 0.99
         strength: 1.0
-    max_steps: 300000
+    max_steps: 150000
     time_horizon: 64
     summary_freq: 2000
+
