--- a/results/CubeAgent5/configuration.yaml
+++ b/results/CubeAgent5/configuration.yaml
@@ -6,7 +6,7 @@ behaviors:
       batch_size: 128
       buffer_size: 1024
       learning_rate: 0.0003
-      beta: 0.005
+      beta: 0.0005
       epsilon: 0.2
       lambd: 0.99
       num_epoch: 5
@@ -37,7 +37,7 @@ behaviors:
     init_path: null
     keep_checkpoints: 5
     checkpoint_interval: 500000
-    max_steps: 150000
+    max_steps: 100000
     time_horizon: 64
     summary_freq: 2000
     threaded: false
@@ -67,7 +67,7 @@ checkpoint_settings:
   initialize_from: null
   load_model: false
   resume: false
-  force: false
+  force: true
   train_model: false
   inference: false
   results_dir: results
