--- a/results/CubeAgent12/configuration.yaml
+++ b/results/CubeAgent12/configuration.yaml
@@ -3,16 +3,16 @@ behaviors:
   CubeAgent:
     trainer_type: ppo
     hyperparameters:
-      batch_size: 64
-      buffer_size: 2048
-      learning_rate: 0.0005
-      beta: 0.01
+      batch_size: 128
+      buffer_size: 1024
+      learning_rate: 0.0003
+      beta: 0.0005
       epsilon: 0.2
       lambd: 0.99
-      num_epoch: 4
+      num_epoch: 5
       shared_critic: false
       learning_rate_schedule: linear
-      beta_schedule: linear
+      beta_schedule: constant
       epsilon_schedule: linear
     network_settings:
       normalize: false
@@ -37,7 +37,7 @@ behaviors:
     init_path: null
     keep_checkpoints: 5
     checkpoint_interval: 500000
-    max_steps: 300000
+    max_steps: 200000
     time_horizon: 64
     summary_freq: 2000
     threaded: false
@@ -67,7 +67,7 @@ checkpoint_settings:
   initialize_from: null
   load_model: false
   resume: false
-  force: false
+  force: true
   train_model: false
   inference: false
   results_dir: results
